# openeo-processes-save-result

./: README.md  pyproject.toml
.github/workflows/: ci.yml
openeo_processes_save_result/: __init__.py  _compat.py  _raster_formats.py  save_result.py  specs.py
tests/: conftest.py  test_backend_contract.py  test_e2e.py  test_save_result.py
